--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve ",
     "build": "ng build",
+    "prodstart": "ng serve --prod --host 0.0.0.0",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
